unpackaged/main/default/objects/Case/fields/Correct_CMIR__c.field-meta.xml
<CustomField>
    <fullName>Correct_CMIR__c</fullName>
    <label>Correct CMIR</label>
    <length>40</length>
    <type>Text</type>
</CustomField>