unpackaged/main/default/objects/Case/fields/Correct_Plant__c.field-meta.xml
<CustomField>
    <fullName>Correct_Plant__c</fullName>
    <label>Correct Plant</label>
    <length>40</length>
    <type>Text</type>
</CustomField>