unpackaged/main/default/objects/Case/fields/Country_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Interest__c</fullName>
    <label>Country of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>