unpackaged/main/default/objects/Case/fields/Country_of_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Submitter__c</fullName>
    <formula>Submitter__r.Country</formula>
    <label>Country of Submitter</label>
    <type>Text</type>
</CustomField>