unpackaged/main/default/objects/Case/fields/CPro_Approval_of_Denial__c.field-meta.xml
<CustomField>
    <fullName>CPro_Approval_of_Denial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPro Approval of Denial</label>
    <type>Checkbox</type>
</CustomField>