unpackaged/main/default/objects/Case/fields/Credit_Note_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Number__c</fullName>
    <label>Credit Note Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>