unpackaged/main/default/objects/Case/fields/Current_Orders_Pending__c.field-meta.xml
<CustomField>
    <fullName>Current_Orders_Pending__c</fullName>
    <label>Current Orders Pending</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>