unpackaged/main/default/objects/Case/fields/Current_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Current_Payment_Terms__c</fullName>
    <label>Current Payment Terms</label>
    <length>50</length>
    <type>Text</type>
</CustomField>