unpackaged/main/default/objects/Case/fields/Customer_Data__c.field-meta.xml
<CustomField>
    <fullName>Customer_Data__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Customer Data</label>
    <type>Checkbox</type>
</CustomField>