unpackaged/main/default/objects/Case/fields/Customer_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Item_Number__c</fullName>
    <description>Used in Changes Subflow to get Customer Item Number</description>
    <label>Customer Item Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>