unpackaged/main/default/objects/Case/fields/Customerdata_Created__c.field-meta.xml
<CustomField>
    <fullName>Customerdata_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customerdata Created ?</label>
    <type>Checkbox</type>
</CustomField>