unpackaged/main/default/objects/Case/fields/Date_Financials_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Financials_Requested__c</fullName>
    <label>Date Financials Requested</label>
    <type>Date</type>
</CustomField>