unpackaged/main/default/objects/Case/fields/Date_Forecast_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Forecast_Received__c</fullName>
    <label>Date Forecast Received</label>
    <type>Date</type>
</CustomField>