unpackaged/main/default/objects/Case/fields/Date_Forecast_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Forecast_Requested__c</fullName>
    <label>Date Forecast Requested</label>
    <type>Date</type>
</CustomField>