unpackaged/main/default/objects/Case/fields/Date_Time_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Assigned__c</fullName>
    <label>Date/Time Assigned</label>
    <type>DateTime</type>
</CustomField>