unpackaged/main/default/objects/Case/fields/Display_Id__c.field-meta.xml
<CustomField>
    <fullName>Display_Id__c</fullName>
    <description>This field is used to show the case number from desk.com</description>
    <externalId>true</externalId>
    <label>Display Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>