unpackaged/main/default/objects/Case/fields/Distributor_Allocation_From__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Allocation_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SB MC SB-16 to manage from where allocations are subtracted.</description>
    <label>Distributor Allocation From</label>
    <referenceTo>Brand_Country_Region_State_Dist_Alloc__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>