unpackaged/main/default/objects/Case/fields/Do_you_still_have_the_product__c.field-meta.xml
<CustomField>
    <fullName>Do_you_still_have_the_product__c</fullName>
    <label>Do you still have the product?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I have bottle with liquid inside</fullName>
            </value>
            <value>
                <fullName>I have bottle without any liquid</fullName>
            </value>
            <value>
                <fullName>I no longer have the bottle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>