unpackaged/main/default/objects/Case/fields/Document_s_Attached__c.field-meta.xml
<CustomField>
    <fullName>Document_s_Attached__c</fullName>
    <label>Document(s) Attached?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>