unpackaged/main/default/objects/Case/fields/Dollar_Value_Remove__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Value_Remove__c</fullName>
    <label>Dollar Value Removed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>