unpackaged/main/default/objects/Case/fields/Error_Rework__c.field-meta.xml
<CustomField>
    <fullName>Error_Rework__c</fullName>
    <label>Error Rework</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>