unpackaged/main/default/objects/Case/fields/Error_Rework_Notes__c.field-meta.xml
<CustomField>
    <fullName>Error_Rework_Notes__c</fullName>
    <label>Error Rework Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>