unpackaged/main/default/objects/Case/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upload Error</fullName>
            </value>
            <value>
                <fullName>Pricing Error</fullName>
            </value>
            <value>
                <fullName>PGI Error</fullName>
            </value>
            <value>
                <fullName>Costing Error</fullName>
            </value>
            <value>
                <fullName>Removal Approval</fullName>
            </value>
            <value>
                <fullName>Upload Removal</fullName>
            </value>
            <value>
                <fullName>Pricing Removal</fullName>
            </value>
            <value>
                <fullName>PGI Removal</fullName>
            </value>
            <value>
                <fullName>Costing Removal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>