unpackaged/main/default/objects/Case/fields/Exclude_Friday_After_10__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Friday_After_10__c</fullName>
    <formula>if(Business_day__c=='Friday' &amp;&amp;  Case_Time_Hour__c &gt;9,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude Friday After 10</label>
    <type>Checkbox</type>
</CustomField>