unpackaged/main/default/objects/Case/fields/Expected_Results_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Results_Date__c</fullName>
    <label>Expected Results Date</label>
    <type>Date</type>
</CustomField>