unpackaged/main/default/objects/Case/fields/Expedited_Claim__c.field-meta.xml
<CustomField>
    <fullName>Expedited_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To expedite a claim you must receive approval from your manager by clicking the "Submit for Approval" button at the top of the record detail page</inlineHelpText>
    <label>Expedited Claim</label>
    <type>Checkbox</type>
</CustomField>