unpackaged/main/default/objects/Case/fields/Expense_approver_name__c.field-meta.xml
<CustomField>
    <fullName>Expense_approver_name__c</fullName>
    <label>Expense approver name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>