unpackaged/main/default/objects/Case/fields/Explanation_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Change__c</fullName>
    <description>Justification for a change to the Case. Can be used generically.</description>
    <inlineHelpText>Explanation or justification of the change</inlineHelpText>
    <label>Explanation of Change</label>
    <type>TextArea</type>
</CustomField>