unpackaged/main/default/objects/Case/fields/Extended_Delay__c.field-meta.xml
<CustomField>
    <fullName>Extended_Delay__c</fullName>
    <formula>AND (
 RecordType.Name = "Changes",
 ISPICKVAL( Type , "Outage"),
 Availability_Date__c - DATEVALUE(CreatedDate) &gt;= 21
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Delay</label>
    <type>Checkbox</type>
</CustomField>