unpackaged/main/default/objects/Case/fields/Extended_Terms_Requested__c.field-meta.xml
<CustomField>
    <fullName>Extended_Terms_Requested__c</fullName>
    <label>Extended Terms Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>