unpackaged/main/default/objects/Case/fields/external_Id__c.field-meta.xml
<CustomField>
    <fullName>external_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>