unpackaged/main/default/objects/Case/fields/Failed2__c.field-meta.xml
<CustomField>
    <fullName>Failed2__c</fullName>
    <label>Failed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>