unpackaged/main/default/objects/Case/fields/Financial_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Financial_Disposition__c</fullName>
    <label>Financial Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Financial Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>