unpackaged/main/default/objects/Case/fields/Financial_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Financial_Invoice__c</fullName>
    <label>Financial Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>