unpackaged/main/default/objects/Case/fields/First_name__c.field-meta.xml
<CustomField>
    <fullName>First_name__c</fullName>
    <description>First name as shown on gov't-issued ID/passport</description>
    <inlineHelpText>as shown on gov't-issued ID/passport</inlineHelpText>
    <label>First name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>