unpackaged/main/default/objects/Case/fields/Fix_Cycle_Number__c.field-meta.xml
<CustomField>
    <fullName>Fix_Cycle_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Fix Cycle Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>