unpackaged/main/default/objects/Case/fields/Fix_on_Edpar_Table__c.field-meta.xml
<CustomField>
    <fullName>Fix_on_Edpar_Table__c</fullName>
    <label>Fix on Edpar Table</label>
    <length>40</length>
    <type>Text</type>
</CustomField>