unpackaged/main/default/objects/Case/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to lock the cases from being edited by the submitters: Distributors (Int'l and Domestic) as well as Beam Employee's.</description>
    <label>Flow</label>
    <type>Checkbox</type>
</CustomField>