unpackaged/main/default/objects/Case/fields/Flow_Completed__c.field-meta.xml
<CustomField>
    <fullName>Flow_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once a flow has been completed this field will be updated, which will drive certain processes</description>
    <label>Flow Completed</label>
    <type>Checkbox</type>
</CustomField>