unpackaged/main/default/objects/Case/fields/Franchise_State__c.field-meta.xml
<CustomField>
    <fullName>Franchise_State__c</fullName>
    <label>Franchise State?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>