unpackaged/main/default/objects/Case/fields/Freight_Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Freight_Claim_Type__c</fullName>
    <label>Compliance Claim Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Light Load</fullName>
            </value>
            <value>
                <fullName>Non-Compliance</fullName>
            </value>
            <value>
                <fullName>Missed RDD</fullName>
            </value>
            <value>
                <fullName>Missed Delivery Appointment</fullName>
            </value>
            <value>
                <fullName>Incorrect BoL</fullName>
            </value>
            <value>
                <fullName>ASN Error</fullName>
            </value>
            <value>
                <fullName>Weight Variance</fullName>
            </value>
            <value>
                <fullName>UPS Misbilling</fullName>
            </value>
            <value>
                <fullName>Labelling Errors</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Demurrage Charges</fullName>
            </value>
            <value>
                <fullName>Lot Code Discrepancy</fullName>
            </value>
            <value>
                <fullName>Unscheduled Delivery</fullName>
            </value>
            <value>
                <fullName>Missing/Incorrect Paperwork</fullName>
            </value>
            <value>
                <fullName>Pallet Concern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>