unpackaged/main/default/objects/Case/fields/FTB_Number__c.field-meta.xml
<CustomField>
    <fullName>FTB_Number__c</fullName>
    <label>FTB Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>