unpackaged/main/default/objects/Case/fields/Fully_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Fully_Delivered__c</fullName>
    <label>Fully Delivered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No-Removal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>